# ot-harjoitustyo

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
src/: scrabble.py
